<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="google1">Continue with Google</string>
    <string name="do_not">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="confirm1">Confirm Password</string>
    <string name="already">Already have an account?</string>
    <string name="recipe_inspire">Daily Inspiration</string>
    <string name="guest">Guest</string>
    <string name="small_signup">Sign up</string>
    <string name="categories">Categories</string>
    <string name="area">Area</string>
    <string name="clientID">821240501293-ll8vpe1gv66ggm7eosa20tke8o0d0sdp.apps.googleusercontent.com</string>
    <string name="ingradients">Ingradients</string>
    <string name="directions">Directions</string>
    <string name="add_plan">Add to Plan</string>
    <string name="search">Search</string>
    <string name="search_meal">Search by Meal</string>
    <string name="search_categories">Search by Categories</string>
    <string name="search_area">Search by Countries</string>
    <string name="search_ingradients">Search by Ingradients</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wedensday">Wedensday</string>
    <string name="thuresday">Thuresday</string>
    <string name="friday">Friday</string>
    <string name="saterday">Saturday</string>
    <string name="fav">Favorite</string>
</resources>