<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.view.SearchFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMealSearch"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"

        android:backgroundTint="@color/bink"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:text="@string/search_meal"
        android:textColor="@color/white"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCategorySearch"
        android:layout_width="360dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"
        android:backgroundTint="@color/bink"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:text="@string/search_categories"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnMealSearch"
        app:layout_constraintStart_toStartOf="@+id/btnMealSearch"
        app:layout_constraintTop_toBottomOf="@+id/btnMealSearch" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAreaSearch"
        android:layout_width="360dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"
        android:backgroundTint="@color/bink"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:text="@string/search_area"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnCategorySearch"
        app:layout_constraintStart_toStartOf="@+id/btnCategorySearch"
        app:layout_constraintTop_toBottomOf="@+id/btnCategorySearch" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIngredientsSearch"
        android:layout_width="360dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"
        android:backgroundTint="@color/bink"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:text="@string/search_ingradients"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnAreaSearch"
        app:layout_constraintStart_toStartOf="@+id/btnAreaSearch"
        app:layout_constraintTop_toBottomOf="@+id/btnAreaSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>